tempfile/derive_more/tests/compile_fail/debug/legacy_fmt_syntax.rs
#[derive(derive_more::Debug)]
pub struct Foo {
    #[debug(fmt = "Stuff({}): {}", "bar")]
    bar: String,
}

#[derive(derive_more::Debug)]
#[debug(fmt = "Stuff({}): {}", _0)]
pub struct Bar(String);

fn main() {}
